logs/profilenj.log
Listing '.'...
Listing './bin'...
Listing './ete3'...
Listing './ete3/tools'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ProfileNJ-20161018.egg-info'...
Listing './lib/python3.5/site-packages/ete3'...
Listing './lib/python3.5/site-packages/ete3/clustering'...
Listing './lib/python3.5/site-packages/ete3/coretype'...
Listing './lib/python3.5/site-packages/ete3/evol'...
Listing './lib/python3.5/site-packages/ete3/evol/parser'...
Listing './lib/python3.5/site-packages/ete3/ncbi_taxonomy'...
Listing './lib/python3.5/site-packages/ete3/ncbi_taxonomy/SQLite-Levenshtein'...
Listing './lib/python3.5/site-packages/ete3/ncbi_taxonomy/SQLite-Levenshtein/src'...
Listing './lib/python3.5/site-packages/ete3/ncbi_taxonomy/SQLite-Levenshtein/tests'...
Listing './lib/python3.5/site-packages/ete3/nexml'...
Listing './lib/python3.5/site-packages/ete3/orthoxml'...
Listing './lib/python3.5/site-packages/ete3/parser'...
Listing './lib/python3.5/site-packages/ete3/phylo'...
Listing './lib/python3.5/site-packages/ete3/phylomedb'...
Listing './lib/python3.5/site-packages/ete3/phyloxml'...
Listing './lib/python3.5/site-packages/ete3/test'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/CladeModelCD'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/L_example'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/S_example'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/S_example/paml'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/S_example/paml/M1'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/S_example/paml/M2'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/S_example/paml/bsA'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/S_example/paml/bsA1'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/S_example/paml/fb'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/XS_example'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/protamine'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/protamine/PRM1'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/protamine/PRM1/paml'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/protamine/PRM1/paml/M0'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/protamine/PRM1/paml/M1'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/protamine/PRM1/paml/M2'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/protamine/PRM1/paml/M7'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/protamine/PRM1/paml/M8'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/protamine/PRM1/paml/fb'...
Listing './lib/python3.5/site-packages/ete3/test/ete_evol_data/protamine/PRM1/slr'...
Listing './lib/python3.5/site-packages/ete3/test/test_ete_build'...
Listing './lib/python3.5/site-packages/ete3/test/test_treeview'...
Listing './lib/python3.5/site-packages/ete3/tools'...
Listing './lib/python3.5/site-packages/ete3/tools/ete_build_lib'...
Listing './lib/python3.5/site-packages/ete3/tools/ete_build_lib/task'...
Listing './lib/python3.5/site-packages/ete3/tools/ete_build_lib/workflow'...
Listing './lib/python3.5/site-packages/ete3/treeview'...
Listing './lib/python3.5/site-packages/ete3/webplugin'...
Listing './lib/python3.5/site-packages/ete3-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/profileNJ'...
Listing './lib/python3.5/site-packages/profileNJ/PolytomySolver'...
Compiling './lib/python3.5/site-packages/profileNJ/PolytomySolver/PolySolver.py'...
***   File "./lib/python3.5/site-packages/profileNJ/PolytomySolver/PolySolver.py", line 542
    print "COST=", ps.getTableValue(self.speciestree, 1)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/profileNJ/TreeLib'...
Compiling './lib/python3.5/site-packages/profileNJ/TreeLib/TreeClass.py'...
***   File "./lib/python3.5/site-packages/profileNJ/TreeLib/TreeClass.py", line 238
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/profileNJ/TreeLib/memorize.py'...
***   File "./lib/python3.5/site-packages/profileNJ/TreeLib/memorize.py", line 33
    print hash, '=============>\n', data
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/profileNJ/tests'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
